<resources>
    <string name="app_name">Keyboard Samples</string>
    <string name="button_show">Show</string>
    <string name="edit_name_hint">Enter your name</string>
    <string name="edit_password_hint">Enter your password</string>
    <string name="edit_email_hint">Enter your email</string>
    <string name="edit_phone_hint">Enter your phone</string>
    <string name="nothing_selected">\"onNothingSelected: \"</string>
    <string-array name="phone_label_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>